py/util/k8s/mutating-admission-webhook-example/python-admission-webhook/mwc/mutating-webhook-config.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-test
webhooks:
  - name: webhook-test.k8s.io
    clientConfig:
      url: https://172.31.28.196:10000
        #host: https://172.31.28.196:10000
#Cluster config 
#      service:
#        name: webhook
#        namespace: admission-test
#        path: "/"
      ## For caBundle
      ## kubectl get configmap -n kube-system extension-apiserver-authentication -o=jsonpath='{.data.client-ca-file}' | base64 | tr -d '\n'
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNU1EY3hNakV3TWpReU5sb1hEVEk1TURjd09URXdNalF5Tmxvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTncyCkRCTCtobm5oWHlDNFVwTEV5bnhFYXlYcWNGYklGMUJPWDRYdkVWT3QzaWprUmtkc2ZwMHNtN1c4YUM5cGNoaGUKRThxWlJoQWZ0TFJDeWlPTUIwaXZpclpwZHBhK0ZJSm5PUjhiWndGbkdhVTNNbHpuc2RKcjFYdXNFZHpYVXlscwpaK2xQdWRQaU5t [...]
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - "apps"
        apiVersions:
          - "*"
        resources:
          - "deployments"
          - "statefulsets"
          - "daemonsets"
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        webhook: "enabled"
